# pizza-api-app

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  catalog-info.yaml  docker-compose.yml  linter.Dockerfile  mkdocs.yaml  properties.json  pyproject.toml  settings.ts  setup.cfg  sndt.json  sonar-project.properties
deploy/dev/: values.yaml
deploy/playground/: values.yaml
deploy/prod/: values.yaml
deploy/uat/: values.yaml
docs/: index.md  openapi.json
iac/scripts/: terraform-destroy.sh  terraform-init.sh
iac/terraform/: .gitlab-ci.yml  apply.sh  destroy.sh  plan.sh
iac/terraform/app/: Makefile  data.tf  eks.tf  main.tf  opsgenie.tf  providers.tf  rds.tf  remote_states.tf  tags.tf  variables.tf  versions.tf
iac/terraform/shared/: main.tf  outputs.tf  providers.tf  remote_states.tf  variables.tf  versions.tf
src/: conftest.py
src/alembic/: env.py
src/alembic/versions/: 0f8df4e60cf6_create_tables_customers.py  625cde9a52a2_create_table_order.py  7f790dba34aa_create_tables_customers.py  bfdec1571021_create_table_customer.py
src/app/: context.py  deps.py  main.py  settings.py
src/app/api/: __init__.py  api.py  openapi.py
src/app/config/: config_gunicorn.py  logging_container.conf
src/app/database/: session.py
src/app/models/: __init__.py  customer.py  order.py  product.py
src/app/repositories/: customer_repositories.py  order_item_repositories.py  order_repositories.py  product_flavour_repositories.py  product_repositories.py  (+1 more)
src/tests/: health_test.py  meta_test.py
(+26 files in other folders)
