[tool.poetry]
name = "pizza-api-app"
version = "0.1.1"
description = ""
authors = [
  "Platform Team <platform@sennder.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
fastapi = "^0.71.0"
ddtrace = "^1.0.0"
datadog = "^0.43.0"
requests = "^2.25.0"
python-json-logger = "^0.1.11"
sentry-sdk = "^1.19.0"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.18"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
httpx = "^0.24.1"


[tool.poetry.dev-dependencies]
mypy = "^0.931"
ipdb = "^0.13.9"
pre-commit = "^2.16.0"
autoflake = ">=1.3"
pytest = "^6.2.5"
pytest-asyncio = ">=0.10"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.2.1"

[tool.black]
line-length = 90
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "ddtrace.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
omit = [
    "**/alembic/**/*.py",
    "**/config/**/*.py",
    "**/tests/**/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
